--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>Here you can see my work.</p>
     
     <h2>Contact Me</h2>
-    <p>You can reach me at: 21f3000285@ds.study.iitm.ac.in</p>
+    <p>You can reach me at: &#50;&#49;&#102;&#51;&#48;&#48;&#48;&#50;&#56;&#53;&#64;&#100;&#115;&#46;&#115;&#116;&#117;&#100;&#121;&#46;&#105;&#105;&#116;&#109;&#46;&#97;&#99;&#46;&#105;&#110;</p>
 
 </body>
 </html>
